@@ -6,7 +6,7 @@ EAPI="2"
 
 SUPPORT_PYTHON_ABIS="1"
 PYTHON_DEFINE_DEFAULT_FUNCTIONS="1"
-#NEED_PYTHON="2.6"
+PYTHON_DEPEND="2:2.5"
 RESTRICT_PYTHON_ABIS="3.*"
 
 inherit gnome2 python
